Added level difference in difficulty and transition to win/lost windows